# serverless-tasks

./: README.md  contributing.md  pyproject.toml
docs/: _config.yml  index.md
serverless_tasks/: __init__.py  _types.py  _wrapper.py
tests/: test_callable.py
