[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=2,<3"]

[tool.flit.metadata]
author = "Anthony King"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Software Development",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Software Development :: Pre-processors",
  "Topic :: Software Development :: Testing",
]
description-file = "README.md"
home-page = "https://github.com/cybojenix/serverless-tasks"
module = "serverless_tasks"

requires = []

[tool.flit.metadata.requires-extra]
dev = [
  "autoflake",
  "black",
  "isort",
  "mypy",
]
test = [
  "pytest",
  "pytest-cov",
  "pytest-randomly",
  "pytest-asyncio",
]

[tool.isort]
force_grid_wrap = 0
include_trailing_comma = true
indent = "    "
line_length = 88
multi_line_output = 3
use_parentheses = true

[tool.pytest.ini_options]
xfail_strict = true

addopts = """
  --cov=serverless_tasks
  --cov-branch
  --no-cov-on-fail
  --cov-report=term:skip-covered
  --strict-markers
  --strict-config
"""

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "\\.\\.\\.", # elipsis, used in Protocols
]
